--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- === تم إضافة رابط الأيقونة هنا === -->
+    <link rel="icon" type="image/png" href="icon.png">
     <style>
         :root {
             --primary-blue: #1976D2; 
@@ -249,7 +251,7 @@
             color: var(--error-red);
             font-weight: 500;
             text-align: center;
-            margin-top: 10px;
+            margin: 10px 0;
             font-size: 1.1rem;
         }
     </style>
@@ -509,31 +511,24 @@
             return true;
         }
 
-        // === تم تعديل هذا الجزء بالكامل ===
         window.addEventListener('DOMContentLoaded', () => {
-            // استعادة الجلسة عند تحميل الصفحة
             const savedCurrent = localStorage.getItem('calculator_currentReading');
             if (savedCurrent) {
-                const savedPrevious = localStorage.getItem('calculator_previousReading');
-                const savedSubscription = localStorage.getItem('calculator_subscriptionType');
-                
                 document.getElementById('current-reading').value = savedCurrent;
-                document.getElementById('previous-reading').value = savedPrevious;
-
+                document.getElementById('previous-reading').value = localStorage.getItem('calculator_previousReading');
+                const savedSubscription = localStorage.getItem('calculator_subscriptionType');
                 if (savedSubscription) {
                     document.getElementById(`sub-${savedSubscription}`).checked = true;
                 }
-
                 calculateElectricBill();
             }
 
-            // إضافة المستمعين لمسح النتائج عند تفريغ الحقول
             const currentReadingInput = document.getElementById('current-reading');
             const previousReadingInput = document.getElementById('previous-reading');
             const resultsDiv = document.getElementById('results');
 
             const clearOnEmpty = (event) => {
-                if (event.target.value.trim() === '') {
+                if (event.target.value.trim() === '' && document.getElementById('current-reading').value.trim() === '') {
                     resultsDiv.innerHTML = '';
                     resultsDiv.style.display = 'none';
                     localStorage.clear();
