--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- === الإضافات الجديدة لـ PWA === -->
     <meta name="theme-color" content="#1976D2">
     <link rel="manifest" href="manifest.json">
+    <link rel="icon" type="image/png" href="icon-1024.png">
     <!-- ============================= -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -561,3 +562,4 @@
     </script>
 </body>
 </html>
+
