--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!-- === الإضافات الجديدة لـ PWA === -->
     <meta name="theme-color" content="#1976D2">
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/png" href="icon-1024.png">
+    <link rel="icon" href="icon-1024.png">
+    <link rel="apple-touch-icon" href="icon-1024.png">
     <!-- ============================= -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -562,4 +563,5 @@
     </script>
 </body>
 </html>
+
 
