--- a/index.html
+++ b/index.html
@@ -283,13 +283,14 @@
             font-size: 1.1rem;
         }
 
-        /* تنسيق سطر المتوسط اليومي - تمت زيادة الـ margin-top */
+        /* تم تعديل المحاذاة لليمين هنا */
         .daily-avg-container {
-            text-align: center;
+            text-align: right;
             color: var(--text-dark);
             font-size: 0.85rem;
             margin-top: 1px; 
             margin-bottom: 20px;
+            padding: 0 5px;
         }
         
         .simple-footer {
