--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 
                 avgDivHtml = `
                     <div class="daily-avg-container">
-                        المتوسط اليومي خلال ${dayLabel} هو ${dailyAvg} كيلوواط
+                        معدل الاستهلاك اليومي خلال ${dayLabel} ${dailyAvg} كيلوواط
                     </div>`;
             }
 
