--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             --text-dark: #333;
             --text-light: #f5f5f5;
             --error-red: #D93025;
-            --warning-orange: #FB8C00;
             --shadow-light: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
 
@@ -293,7 +292,7 @@
             font-size: 1.1rem;
         }
 
-        /* تنسيقات إشارات المرور */
+        /* نظام إشارات المرور الهادئ */
         .daily-avg-container {
             text-align: right;
             font-size: 0.88rem;
@@ -306,21 +305,21 @@
         }
 
         .avg-safe {
-            background-color: #E8F5E9; /* أخضر فاتح */
-            color: #2E7D32;
-            border-color: #C8E6C9;
+            background-color: #f1f8e9; 
+            color: #33691e;
+            border-color: #dcedc8;
         }
 
         .avg-warning {
-            background-color: #FFF3E0; /* برتقالي فاتح */
-            color: #E65100;
-            border-color: #FFE0B2;
+            background-color: #fff8e1; 
+            color: #bf360c;
+            border-color: #ffecb3;
         }
 
         .avg-danger {
-            background-color: #FFEBEE; /* أحمر فاتح */
-            color: #C62828;
-            border-color: #FFCDD2;
+            background-color: #fef2f2; 
+            color: #991b1b;
+            border-color: #fee2e2;
         }
 
         .daily-avg-container strong {
@@ -492,18 +491,16 @@
                     let dayLabel = (diffDays === 1) ? "يوم واحد" : (diffDays === 2) ? "يومين" : (diffDays >= 3 && diffDays <= 10) ? `<strong>${diffDays}</strong> أيام` : `<strong>${diffDays}</strong> يوم`;
 
                     let predictionHtml = "";
-                    let trafficClass = "avg-safe"; // الافتراضي أخضر
+                    let trafficClass = "avg-safe";
 
                     if (diffDays >= 10) {
                         const predictedCons = Math.round(dailyAvgRaw * 30);
                         const predictedBill = getFullCost(predictedCons, subscriptionType);
                         
-                        // تطبيق منطق إشارات المرور بناءً على التوقع
                         if (subscriptionType === 'supported') {
                             if (predictedCons > 600) trafficClass = "avg-danger";
                             else if (predictedCons > 300) trafficClass = "avg-warning";
                         } else {
-                            // لغير المدعوم، نضع عتبة عند 1000 ك.و
                             if (predictedCons > 1000) trafficClass = "avg-danger";
                         }
 
