--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 
             modalContentDiv.innerHTML = `
                 ${avgDivHtml}
-                <div class="result-row" style="margin-top: 0; margin-bottom: 5px;"><span class="result-label" style="font-weight: bold;">كلفة الاستهلاك الحالي ${formatNumber(consumption)} ك.و:</span></div>
+                <div class="result-row" style="margin-top: 0; margin-bottom: 5px;"><span class="result-label" style="font-weight: bold;">كلفة الاستهلاك الحالي ${formatNumber(consumption)} كيلوواط:</span></div>
                 <div class="table-container" style="margin-bottom: 15px;">
                     <table>
                         <thead><tr><th>الشريحة</th><th>استهلاك</th><th>التعرفة</th><th>الإجمالي</th></tr></thead>
