--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             justify-content: space-between; 
             align-items: flex-end; 
             margin: 10px 0;
-            font-size: 1.05rem;
+            font-size: 1rem; /* تم توحيد الحجم لجميع الصفوف لتحقيق التوازن */
         }
         
         .result-text-value {
