--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         * {
             box-sizing: border-box;
             font-family: 'Roboto', sans-serif;
+            /* إلغاء الوميض الأزرق عند الضغط في الجوال */
+            -webkit-tap-highlight-color: transparent;
+            outline: none;
         }
         
         html, body {
@@ -133,7 +136,6 @@
         .input-group input:focus {
             border-color: var(--focus-blue); 
             border-width: 2px; 
-            outline: none; 
             box-shadow: 0 0 0 1px var(--focus-blue); 
         }
 
@@ -156,6 +158,7 @@
 
         .radio-option input[type="radio"] {
             margin-left: 8px;
+            cursor: pointer;
         }
         
         button {
@@ -168,11 +171,12 @@
             font-size: 1rem;
             font-weight: 500;
             cursor: pointer;
-            transition: background-color 0.3s;
+            transition: background-color 0.2s, transform 0.1s;
         }
 
-        button:hover {
+        button:active {
             background-color: #1565C0;
+            transform: scale(0.98); /* تأثير ضغطة بسيط بدلاً من الوميض */
         }
 
         .modal-overlay {
@@ -379,7 +383,7 @@
     </footer>
 
     <script>
-        // دالة إغلاق الكيبورد عند ضغط Enter في الهاتف
+        // إغلاق الكيبورد عند ضغط Enter في الهاتف
         document.querySelectorAll('.hide-kb-on-enter').forEach(input => {
             input.addEventListener('keypress', function(e) {
                 if (e.key === 'Enter') {
