--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 
                 <div class="extra-inputs">
                     <div class="phase-input-wrapper">
-                        <label for="meter-phase">نوع العداد (فاز)</label>
+                        <label for="meter-phase">نوع العداد (1 أو 3 فاز)</label>
                         <input type="number" id="meter-phase" value="1" class="hide-kb-on-enter">
                     </div>
                     <div class="waste-input-wrapper">
