--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div class="content-wrapper">
         <div class="header-blue">
             <h2>حاسبة فاتورة الكهرباء الشهرية</h2>
-            <p>الرجاء إدخال قراءة العداد واختيار نوع الاشتراك للحصول على القيمة التقديرية.</p>
+            <p>أدخل قراءة العداد ونوع الاشتراك لمعرفة القيمة التقديرية</p>
         </div>
 
         <div class="card">
