--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
         .table-container { border: 1px solid #ddd; border-radius: 12px; overflow: hidden; margin-bottom: 20px; width: 100%; }
         table { width: 100%; border-collapse: collapse; font-size: 0.9rem; }
         th, td { border-bottom: 1px solid #eee; padding: 10px 8px; text-align: center; }
-        th { background-color: #f0f8ff; color: var(--primary-blue); font-weight: 500; }
+        
+        /* التعديل المطلوب: جعل الرؤوس عريضة جداً بدون تغيير الحجم */
+        th { background-color: #f0f8ff; color: var(--primary-blue); font-weight: 700; }
+
         .daily-avg-container { text-align: right; font-size: 0.88rem; padding: 12px 15px; line-height: 1.8; border-radius: 12px; margin-top: 0; margin-bottom: 20px; box-sizing: border-box; border: 1px solid transparent; }
         .avg-safe { background-color: #f1f8e9; color: #33691e; border-color: #dcedc8; }
         .avg-warning { background-color: #fff8e1; color: #bf360c; border-color: #ffecb3; }
