--- a/index.html
+++ b/index.html
@@ -75,14 +75,17 @@
             display: block; font-size: 0.85rem; color: #666; margin-bottom: 5px;
         }
         
+        /* تعديل: جعل الأرقام المدخلة بخط عريض لسهولة القراءة */
         .input-group input[type="number"], .input-group input[type="text"] {
             width: 100%;
             padding: 8px;
             border: 1px solid #ccc;
             border-radius: 12px;
             font-size: 1.1rem;
+            font-weight: 700; /* خط عريض */
             text-align: center; 
             transition: border-color 0.3s, box-shadow 0.3s; 
+            color: var(--text-dark);
         }
 
         .input-group input:focus {
@@ -105,7 +108,7 @@
             padding: 8px 20px;
             border-radius: 14px;
             font-size: 1rem;
-            font-weight: 500;
+            font-weight: 700; /* جعل نص الزر عريضاً أيضاً */
             cursor: pointer;
             transition: background-color 0.3s;
             -webkit-tap-highlight-color: transparent;
@@ -126,7 +129,7 @@
         table { width: 100%; border-collapse: collapse; font-size: 0.9rem; }
         th, td { border-bottom: 1px solid #eee; padding: 10px 8px; text-align: center; }
         
-        /* التعديل المطلوب: جعل الرؤوس عريضة جداً بدون تغيير الحجم */
+        /* رؤوس الجدول بخط عريض بناءً على طلبك السابق */
         th { background-color: #f0f8ff; color: var(--primary-blue); font-weight: 700; }
 
         .daily-avg-container { text-align: right; font-size: 0.88rem; padding: 12px 15px; line-height: 1.8; border-radius: 12px; margin-top: 0; margin-bottom: 20px; box-sizing: border-box; border: 1px solid transparent; }
