--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            margin-top: 25px; /* تم تعديل المسافة هنا */
+            margin-top: 25px;
         }
 
         button#calculate-btn:active { transform: scale(0.98); }
@@ -172,7 +172,7 @@
         
         .final-total-section { text-align: center; margin-top: 10px; }
         .final-total-section p { font-size: 1rem; color: var(--text-main); margin: 0; } 
-        .final-total-section span { font-size: 1.7rem; font-weight: 800; color: var(--secondary-green); display: block; margin-top: 5px; line-height: 1; } 
+        .final-total-section span { font-size: 1.45rem; font-weight: 800; color: var(--secondary-green); display: block; margin-top: 5px; line-height: 1; } 
         
         .table-container { border: 1px solid #e2e8f0; border-radius: 10px; overflow: hidden; margin-bottom: 15px; width: 100%; }
         table { width: 100%; border-collapse: collapse; font-size: 0.85rem; } 
