--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 ${avgDivHtml}
                 <div class="result-row" style="margin-top: 15px; margin-bottom: 10px;"><span class="result-label" style="font-weight: bold;">كلفة الاستهلاك الحالي ${formatNumber(consumption)} كيلوواط:</span></div>
                 <div class="table-container">
-                    <table><thead><tr><th>الشريحة</th><th>استهلاك</th><th>التعرفة</th><th>الإجمالي</th></tr></thead>
+                    <table><thead><tr><th>الشريحة</th><th>الاستهلاك</th><th>التعرفة</th><th>الإجمالي</th></tr></thead>
                     <tbody>${tableRowsHtml}</tbody></table>
                 </div>
                 <div class="result-row" style="margin-bottom: 10px;"><span class="result-label" style="font-weight: bold;">رسوم إضافية:</span></div>
