--- a/index.html
+++ b/index.html
@@ -347,7 +347,6 @@
             if (currentReadingValue === '') {
                 modalContentDiv.innerHTML = '<p style="color:var(--error-red); text-align:center; font-weight:bold; padding: 20px;">الرجاء إدخال القراءة الحالية على الأقل.</p>';
                 modal.style.display = 'flex';
-                // التعديل: تفعيل الإغلاق عند الضغط في الخلفية لحالة الخطأ
                 modal.onclick = (event) => { if (event.target === modal) modal.style.display = 'none'; };
                 return false;
             }
@@ -359,7 +358,6 @@
             if (hasPrevious && currentReading < previousReading) {
                 modalContentDiv.innerHTML = '<p style="color:var(--error-red); text-align:center; font-weight:bold; padding: 20px;">الرجاء التأكد من القراءة السابقة.</p>';
                 modal.style.display = 'flex';
-                // التعديل: تفعيل الإغلاق عند الضغط في الخلفية لحالة الخطأ
                 modal.onclick = (event) => { if (event.target === modal) modal.style.display = 'none'; };
                 return false;
             }
@@ -387,7 +385,8 @@
                     let trafficClass = "avg-warning"; 
                     
                     if (diffDays >= 10) {
-                        const predictedCons = Math.round(dailyAvgRaw * 30);
+                        // التعديل هنا: نضرب المتوسط في عدد الأيام الفعلي بدلاً من 30
+                        const predictedCons = Math.round(dailyAvgRaw * diffDays);
                         const predictedBill = getFullCost(predictedCons, subscriptionType, wasteFeeValue, phaseValue);
                         
                         if (subscriptionType === 'supported') {
